--- a/app/src/main/res/layout/speaker_detail.xml
+++ b/app/src/main/res/layout/speaker_detail.xml
@@ -139,6 +139,16 @@
                 android:layout_marginStart="16dp"
                 android:background="#EEEEEE" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingStart="12dp"
+                android:text="Speaker's Events"
+                android:paddingBottom="5dp"
+                android:fontFamily="serif"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/speakers_detail_recyclerview"
                 android:layout_width="match_parent"
