--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -7,6 +7,8 @@
     android:layout_marginBottom="4dp"
     android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
