--- a/app/src/main/res/layout/speaker_detail.xml
+++ b/app/src/main/res/layout/speaker_detail.xml
@@ -4,44 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="horizontal"
     tools:context="org.ascebuffalo.asce.Speaker_profile"
-    android:fitsSystemWindows="true"
-    tools:ignore="MergeRootFrame"
-    >
+    tools:ignore="MergeRootFrame">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="280dp"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        >
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|snap|enterAlways"
             app:contentScrim="?attr/colorPrimary"
-            app:toolbarId="@+id/toolbar"
-            >
+            app:layout_scrollFlags="scroll|snap|enterAlways"
+            app:toolbarId="@+id/toolbar">
+
             <ImageView
-            android:id="@+id/main.backdrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:fitsSystemWindows="true"
-            app:layout_collapseMode="parallax"
-            android:src="@drawable/speaker_details_header"
-            tools:ignore="ContentDescription"
-            />
+                android:id="@+id/main.backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/david_peterson"
+                app:layout_collapseMode="parallax"
+                tools:ignore="ContentDescription" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/main.toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-            />
+                app:layout_collapseMode="pin" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -56,8 +55,7 @@
             android:id="@+id/title_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
 
             <LinearLayout
@@ -75,7 +73,8 @@
                     android:paddingTop="16dp"
                     android:text="name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textSize="30sp" />
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/speakers_text"
@@ -84,11 +83,12 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="serif"
-                    android:text="bio"
+                    android:text="position"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -97,12 +97,12 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="12dp"
                     android:orientation="horizontal">
+
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_marginRight="4dp"
-                        android:background="@drawable/bg_shadow"
-                        >
+                        android:background="@drawable/bg_shadow">
 
                         <ImageButton
                             android:layout_width="100dp"
@@ -114,21 +114,21 @@
                             android:src="@drawable/btn_twitter_normal"
                             android:textColor="@android:color/holo_blue_dark" />
                     </FrameLayout>
+
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_marginRight="4dp"
-                        android:background="@drawable/bg_shadow"
-                        >
+                        android:background="@drawable/bg_shadow">
+
                         <ImageButton
                             android:layout_width="100dp"
                             android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:clickable="true"
                             android:focusable="true"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/btn_website_normal"
-                            />
+                            android:src="@drawable/btn_website_normal" />
                     </FrameLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -140,14 +140,17 @@
                 android:background="#EEEEEE" />
 
             <TextView
+                android:id="@+id/speakers_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:paddingStart="12dp"
-                android:text="Speaker's Events"
-                android:paddingBottom="5dp"
                 android:fontFamily="serif"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                android:paddingBottom="5dp"
+                android:paddingStart="12dp"
+                android:paddingTop="5dp"
+                android:text="Speaker's Events"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/speakers_detail_recyclerview"
@@ -156,9 +159,7 @@
         </LinearLayout>
 
 
-
     </android.support.v4.widget.NestedScrollView>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
