--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorHighlight">#B6B6B6</color>
     <color name="whiteArrow">#FFFFFF</color>
 
+    <color name="white">#FFFFFF</color>
+
+
 </resources>
