--- a/app/src/main/res/layout/fragment_friday_schedule.xml
+++ b/app/src/main/res/layout/fragment_friday_schedule.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.ascebuffalo.asce.DayScheduleFragment"
-    android:background="#87ceeb">
+    android:background="@android:color/darker_gray">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_friday_schedule"
