--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -13,7 +13,7 @@
       app:tabGravity="fill"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="#ccc"/>
+      android:background="@android:color/white"/>
 
   <android.support.v4.view.ViewPager
       android:id="@+id/nav_pager"
