--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
     android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
     android:clickable="true"
@@ -102,6 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/droid_serif"
                 android:paddingBottom="4dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
@@ -117,6 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/droid_serif"
                 android:paddingBottom="4dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
