--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#87ceeb"
+    android:background="@android:color/darker_gray"
     android:padding="8dp"
     tools:context="org.ascebuffalo.asce.EventDetailsActivity">
 
