--- a/app/src/main/res/layout/speaker_detail.xml
+++ b/app/src/main/res/layout/speaker_detail.xml
@@ -32,7 +32,7 @@
                 android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/david_peterson"
+                android:src="@drawable/francis"
                 app:layout_collapseMode="parallax"
                 tools:ignore="ContentDescription" />
 
