--- a/app/src/main/res/layout/fragment_friday_schedule.xml
+++ b/app/src/main/res/layout/fragment_friday_schedule.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.ascebuffalo.asce.DayScheduleFragment"
-    android:background="@android:color/darker_gray">
+    tools:context="org.ascebuffalo.asce.DayScheduleFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_friday_schedule"
