--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,24 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="org.ascebuffalo.asce.ScheduleFragment"
     android:orientation="vertical"
-    >
+    tools:context="org.ascebuffalo.asce.ScheduleFragment">
 
-  <android.support.design.widget.TabLayout
-      android:id="@+id/nav_schedule_tabs"
-      app:tabMode="fixed"
-      app:tabGravity="fill"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@android:color/white"/>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/nav_schedule_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        app:tabGravity="fill"
+        app:tabMode="fixed" />
 
-  <android.support.v4.view.ViewPager
-      android:id="@+id/nav_pager"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/nav_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
