--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -12,16 +12,16 @@
     android:focusable="true"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view_course_listing"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="2dp">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:id="@+id/card_view_course_listing"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginBottom="4dp"-->
+        <!--android:layout_marginEnd="4dp"-->
+        <!--android:layout_marginStart="4dp"-->
+        <!--android:layout_marginTop="4dp"-->
+        <!--app:cardCornerRadius="4dp"-->
+        <!--app:cardElevation="2dp">-->
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -131,6 +131,6 @@
 
 
         </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
 
 </LinearLayout>
