--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -3,16 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
     android:padding="8dp"
     tools:context="org.ascebuffalo.asce.EventDetailsActivity">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:elevation="4dp"
-        app:cardCornerRadius="4dp">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:elevation="4dp"-->
+        <!--app:cardCornerRadius="4dp">-->
 
 
         <android.support.constraint.ConstraintLayout
@@ -211,6 +210,6 @@
 
 
         </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
 
 </android.support.v4.widget.NestedScrollView>
