--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -20,6 +20,7 @@
 
             <TextView
                 android:id="@+id/tv_event_details_name"
+                android:transitionName="transition_event_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
